# aktualizr

./: httpclient_8cc_source.html  httpclient_8h_source.html  httpclient__test_8cc_source.html
ci/gitlab/: .gitlab-ci.yml
config/sql/: schema.sql
config/sql/migration/: migrate.20.sql
config/sql/rollback/: rollback.20.sql
scripts/: test.sh  test_aktualizr_repo.sh  test_install_aktualizr_and_update.sh
src/aktualizr_get/: main.cc
src/aktualizr_info/: main.cc
src/aktualizr_lite/: helpers.cc  helpers.h  helpers_test.cc  main.cc
src/libaktualizr-c/: CMakeLists.txt  api_test.cc
src/libaktualizr/bootloader/: bootloader.cc  bootloader_config.cc  bootloader_config.h
src/libaktualizr/config/: config.h
src/libaktualizr/http/: httpclient.cc  httpclient_test.cc
src/libaktualizr/logging/: android_log_sink.cc  default_log_sink.cc  logging.cc  logging.h
src/libaktualizr/package_manager/: dockerappmanager.cc  dockerappmanager.h  dockerappmanager_test.cc  ostreemanager.cc  ostreemanager.h  packagemanagerconfig.cc  packagemanagerconfig.h
src/libaktualizr/primary/: aktualizr.cc  aktualizr.h  aktualizr_fullostree_test.cc  aktualizr_test.cc  empty_targets_test.cc  sotauptaneclient.cc  sotauptaneclient.h
src/libaktualizr/storage/: sqlstorage.cc
src/libaktualizr/uptane/: uptane_test.cc
src/libaktualizr/utilities/: config_utils.h  sig_handler.cc  utils.h
src/load_tests/: check.cc  executor.h  provision.cc
src/uptane_generator/: main.cc  repo.cc
tests/: CMakeLists.txt  run_vector_tests.sh  uptane_vector_tests.cc
